@@ -143,6 +143,7 @@
     <Compile Include="Dialect\GenericDialect.cs" />
     <Compile Include="Dialect\InsertGeneratedIdentifierRetrievalMethod.cs" />
     <Compile Include="Dialect\MsSql2000Dialect.cs" />
+    <Compile Include="Dialect\MsSql2005DialectQueryPager.cs" />
     <Compile Include="Dialect\MsSql7Dialect.cs" />
     <Compile Include="Dialect\MsSqlAzure2008Dialect.cs" />
     <Compile Include="Dialect\MySQLDialect.cs" />
